--- a/project_description.html
+++ b/project_description.html
@@ -392,7 +392,7 @@
         <h4>
             <li>The milestones</li>
         </h4>
-        <img src="assets\img\Milestones.png" alt="Milestones">
+        <img src="assets\img\milestone.svg" alt="Milestones">
         
         <h4>
             <li>The timetable</li>
@@ -401,19 +401,19 @@
         <h3>Testing</h3>
         <div>
             <figure>
-                <img src="assets\img\Testing diagram.png" alt="Testing diagram">
-                <p style="text-align:center">Fig. 1 The testing diagram</p>
+                <img class="testing-diagram" src="assets\img\testingdiagram.svg" alt="Testing diagram">
+                <figcaption>Fig. 1 The testing diagram</figcaption>
             </figure>
             <ol>
-                <li>Development: Developing and improving the code to create a complete product.</li>
+                <li><strong>Development:</strong> Developing and improving the code to create a complete product.</li>
                 <br>
-                <li>White box Testing: Inspecting every line of code and debug if there are any difficulties arise.</li>
+                <li><strong>White box Testing:</strong> Inspecting every line of code and debug if there are any difficulties arise.</li>
                 <br>
-                <li>Black box Testing: Analyzing and checking the functionality of an application against the customers’ requirements. There are two parts of Black box Testing: 
+                <li><strong>Black box Testing:</strong> Analyzing and checking the functionality of an application against the customers’ requirements. There are two parts of Black box Testing: 
                     Functional Testing and Non–functional Testing.
                 </li>
                 <li>
-                    <p>Functional Testing:</p>
+                    <p><strong>Functional Testing:</strong></p>
                     <ul>
                         <li>Unit Testing: Testing independent functions (unit) of the application through the specific requirements.</li>
                         <li>Integration Testing: Testing data flow or interface between two distinction features.</li>
@@ -421,7 +421,7 @@
                     </ul>
                 </li>
                 <li>
-                    <p>Non-functional Testing:</p>
+                    <p><strong>Non-functional Testing:</strong></p>
                     <ul>
                         <li>
                             <p>Performance Testing: Analyzing the processing of the product by the following criteria:</p>
@@ -456,32 +456,32 @@
                     </ul>
                     <br>
                 </li>
-                <li>Automation Testing: Running automation testing using Katalon Studio to cover all errors.</li>
+                <li><strong>Automation Testing:</strong> Running automation testing using Katalon Studio to cover all errors.</li>
             </ol>
         </div>
         
         <h3>Communication:</h3>
-        <li>How we will communicate as a group</li>
+        <li><strong>How we will communicate as a group</strong></li>
         <p>
             Clear communication between project participants is essential. This covers communications during class and when we cannot meet in person. First, we have a 
             message group on Facebook Messenger where we discuss fewer essential issues like verifying the time and location of meetings or notifying absences from 
             classes or seminars. Second, we have a Microsoft Teams group where we do our online discussions and go into greater detail about the project. Thirdly, 
             we will book our in-person meetings via the RMIT library website by checking which of the library's discussion rooms is open during the time we choose.
         </p>
-        <li>How frequently the meetings will be held.</li>
+        <li><strong>How frequently the meetings will be held</strong></li>
         <p>
             Our team usually meets three times a week, once in person and twice virtually. Every Wednesday at noon, an offline session will be held at the RMIT library, 
             and every Monday and Thursday at 7:30 PM, an online session will be held. While online meetings are used to plan and schedule what's best for the team and 
             the project, offline meetings give team members a chance to discuss any issues they are having with their work on the project.
         </p>
-        <li>Alternative communication channels.</li>
+        <li><strong>Alternative communication channels</strong></li>
         <p>
             To upload and examine everyone's project-related work, we also set up a shared Google Drive. We fill out a paper for each online meeting that details the time 
             and date, the meeting's goals, and the topics we covered. For participants who could not attend the meeting to be still aware of what was discussed prior to 
             the next meeting, these papers are then uploaded to the shared drive in a folder called "Meeting minutes." We also utilize an excel spreadsheet to specify 
             project deadlines and the tasks that everyone must do before a particular date.
         </p>
-        <li>Approaches for helping members.</li>
+        <li><strong>Approaches for helping members</strong></li>
         <p>
             Members will encounter issues in our group project that they need help resolving and the team's assistance. These issues could include undertaking topic-related 
             research or skipping a presentation or conference. Members with these issues can always email or ask questions via our Facebook Messenger group. The group will 
@@ -492,7 +492,7 @@
 
         <ol>
             <li>
-                <p>Lack of programming experience</p>
+                <p><strong>Lack of programming experience</strong></p>
                 <p>
                     Being RMIT University first-year students, most of our team has little to no programming experience, which could be a significant roadblock to developing our 
                     project. The coding and programming process is complex and challenging, much like the school system, which is complicated and diverse. The system's foundation 
@@ -503,7 +503,7 @@
                 </p>
             </li>
             <li>
-                <p>Insufficient performance monitoring</p>
+                <p><strong>Insufficient performance monitoring</strong></p>
                 <p>
                     The worst thing that could happen to any endeavor is for it to proceed more slowly than expected. It is always complex to monitor a project's completion because there 
                     are inevitably unforeseen problems. It can take longer to complete tasks because of bad experiences or poor time management, or the entire project might be placed on 
@@ -515,7 +515,7 @@
                 </p>
             </li>
             <li>
-                <p>Miscommunication</p>
+                <p><strong>Miscommunication</strong></p>
                 <p>
                     Every project's success depends on effective communication. A smooth exchange of information can get the process along much more quickly. However, it is not always simple 
                     to keep the interactions between the members consistent. Teammates' varied lifestyles and work styles are significant communication barriers. For the team to interact 
@@ -526,141 +526,7 @@
             </li>
         </ol>
 
-<<<<<<< Updated upstream
     </div>
-=======
-<h3>
-    Roles:
-</h3>
-<table>
-    <thead>
-      <tr>
-        <th>Roles</th>
-        <th>Technical Lead (N.Minh)</th>
-        <th>User Interface Designer (Trong)</th>
-        <th>Back–end Developer (H.Minh)</th>
-        <th>Cybersecurity (Chau)</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>Description</td>
-        <td>Taking the technical lead role in this project, Minh is tasked with planning and checking the group's progress. Specifically, 
-            he needs to coordinate with group members to construct the project plan, which includes the milestones for each phase and a 
-            working timeline with precise detail. Also, Minh oversees determining the group's pace and adjusting the team result accordingly 
-            to match the expectations. Moreover, he is responsible for evaluating the outcome and combining parts of the product.
-        </td>
-        <td>My mission in this project is to create a clear, energetic interface which is easy to access all the units. To accomplish this, 
-            the developer requires not only skills but also being predictable in designing a website interface. For example, I must predict 
-            all the possibilities when a new user visits the page. So that I can perceive where to put the essential functions that are easily 
-            navigable. Moreover, since this is an educational application, the font and color must be engaging and go well together to create 
-            the best experience for our users. Beside the conveniences, I also have to ensure that the Frontend section can operate effectively 
-            with the Backend sections so the website can run effectively. Doing this job exceptionally would require me to have solid experience 
-            in CSS, JavaScript with assistance like React and CSS library.
-        </td>
-        <td>As the project’s back-end developer, Minh will decide how to best design the web application framework. This includes writing clean 
-            code that is readable for other members to be able to read and implement front-end features smoothly and working with SQL and Python 
-            to create a system that handles the inputs from users using a database. However, something that Minh can’t ignore is how to make the 
-            system as efficient as possible to make the process from request to action seamless.
-        </td>
-        <td>More and more information is being exposed on the internet every day due to weak security. Having your information exposed on the internet 
-            is no joke, it could result in many serious problems which could lead to money lost, fraud. That’s why cybersecurity plays an important 
-            role in almost everything online nowadays. The person working in the cybersecurity field means that they will mainly be responsible for 
-            protecting the data, preventing the application from many forms of cyberattacks, and unauthorized access, solve security leaks as soon 
-            as one is detected. For this project, the role of cybersecurity will be carried out by Chau, making sure no leakage of data would occur, 
-            maintain the security of the application. To do so, she is required to have some knowledge of how a network operates, and how the application 
-            communicates, some basic knowledge in C, JavaScript, Python is a must. Her job is to troubleshoot the application, detect malicious code and 
-            whenever there’s a problem identified, establish a theory of probable cause, test the theory to determine the cause and lastly implement, 
-            come up with solutions.
-        </td>
-      </tr>
-   </tbody>
-</table>
-<h3>Scope and Limits:</h3>
-<h4>
-    <li>Scope:</li>
-</h4>
-<!-- REMEMBER TO ADD THE SCOPE TABLE -->
-<h4>
-    <li>Limits:</li>
-</h4>
-<p>Ambitious as we were, constructing the real school management system was a challenging target. The project plan was proved to be much demanding in 
-    both knowledge required and expected feature. Fundamentally, there were programming languages that were advanced compared to us freshmen, such as 
-    JavaScript or SQL. Using these languages means that we must spend considerable amount of time researching and learning which was unattainable 
-    considering the deadlines we got. Furthermore, the knowledge regarding those programming languages is never straightforward as there is a vast 
-    quantity of functions within each section and sorting them out was challenging. Moreover, even if we were able to full grasp the techniques, 
-    utilizing them requires experience and a deep understanding. Also, while applying and implementing the codes, there may arise issues that involve 
-    the use of more sophisticated techniques such as APIs and cybersecurity. Additionally, the inexperience in building IT system will also hinder our 
-    progress as we possess no prior knowledge regarding constructing and combining the system. Regarding the feature side, the complexity of some functions 
-    turned out to be challenging. The searching and recommendation in Documentation tasked us with connecting the database of the courses to the internet 
-    and sort out for relevant results. We were also hampered by the huge quantity of features that was impossible to achieve in due time.
-</p>
-<p>To address these issues, our group have agreed upon creating a figma of the product: Fig 2, Fig 3, and Fig 4 showing the Home page, Student Interface, 
-    and Teacher Interface respectively. As for the countermeasure to immense number of features, we decided to limit the appearance of the functions on 
-    the main page, restricted it so that only the most significant usages remained. For Students, that would be Courses, Timetable, Performance Tracking 
-    and Document whereas Courses, Timetable, Marking and Document is the most significant to Teachers. In the process of constructing the Figma, we developed 
-    a variety in theme between Teachers and Students. Every other function that is not listed in the main page can be viewed upon pressing the “…” button.
-</p>
-<h3>Tools and Technologies</h3>
-<h4>
-    <li>Programming language selection:</li>
-</h4>
-<p>
-    The first milestone in building a school management system is choosing the appropriate programming language for the project. This product tasked us with 
-    constructing a friendly user–interface and database used for storing data and documents from the clients. As first-year students in the field of 
-    Information Technology, deciding on the right programming language without basic knowledge in web foundation is a huge challenge
-</p>
-<p>
-    Our research in the front–end segments results in various options. There are HTML, CSS, JavaScript, ReactJS and even Bootstrap. Each of these languages 
-    have their own superiority compared to the others which make the process of finalizing the decision even harder. In the end, our team decide to go with 
-    HTML, CSS, and JavaScript as the first two are the most feasible for beginners and JavaScript is excellent in handling web behavior.
-</p>
-<p>
-    Regarding the back–end, there are many choices that comes to our hand, namely NodeJS, PHP, Python, .NET, Ruby, and SQL. However, we all straightforwardly 
-    unite under the idea of using Python and SQL as we believe that is the most suitable for building a database
-</p>
-<h5>HTML 5:</h5>
-<p>
-    HTML 5 is one of the first programming languages that the students learn in their first year of university. Nevertheless, the programming language still 
-    proved to be sufficient in building a suitable user–interface. The major objective of HTML is to provide blocks that make up the structure of the website. 
-    That structure will then serve as the backbone for decoration and animation provided by CSS and JavaScript.
-</p>
-<h5>CSS 3:</h5>
-<p>
-    Along with HTML, CSS is one of the friendliest programming languages for beginners while still being able to produce high quality interface. As the programming 
-    language is also famous nowadays, it can be executed without the risk of mismatch in the technology. The main purpose of CSS is to enable the presentation of 
-    layout, colors, and fonts.
-</p>
-<h5>JavaScript:</h5>
-<p>
-    Although JavaScript is not initially accessible with our current knowledge, we believe it is worth the time to research and learn how to code in JavaScript. 
-    The programming language itself is one of the most popular choices regarding the Front–end section with many distinct features. In this product, JavaScript 
-    is responsible for the interactive features of web behavior.
-</p>
-<h5>SQL:</h5>
-<p>
-    Just like JavaScript, SQL does not belong in our current knowledge asset but is tempting enough for us to strive for. It is said to possess the ability to 
-    function at high speed, meaning an efficient and quick data flow for the user. Hence, we will use SQL to construct the back–end database for the management 
-    system.
-</p>
-<h5>Python:</h5>
-<p>
-    Being the first programming language and one of the most versatile one, Python is the first name came up to our mind when we were brainstorming our options. 
-    Famous as it is, choosing Python also give us the chance to implement many open-source library that is both highly efficient and convenient for the developer. 
-    The main logic of the product will be handled by Python.
-</p>
-<h5>GitHub:</h5>
-<p>
-    Cooperation between freshmen in programming is challenging since everyone will have their own platform to work on and the result is conflicted when added together. 
-    That is where GitHub truly shines. By using GitHub, the delegation between team members is more feasible as they can create a branch to focus on their own part. 
-    Also, through pulling requests and committing to the main, our group can identify the conflict in our code and fix it without having to tamper the main branch.
-</p>
-<h3>Timetable:</h3>
-<div class="milestone">
-    <h4><li>The milestones</li></h4>
-    <img src="assets\img\milestone.svg" alt="">
-</div>
->>>>>>> Stashed changes
 </div>
 </body>
 </html>
