Commit figma images

--- a/Project Outcome.html
+++ b/Project Outcome.html
@@ -16,9 +16,21 @@
 
 <div class="content">
   <h1> Project Outcome </h1>
-  <h3> 1. Figma</h3>
-
-
+  <div class="figma">
+    <h3> 1. Figma</h3>
+    <figure>
+      <img class="figma-image" src="assets\img\homepage.svg" alt="home page">
+      <figcaption>Fig. 2. The Home Page</figcaption>
+    </figure>
+    <figure>
+      <img class="figma-image" src="assets\img\studentview.svg" alt="student view">
+      <figcaption>Fig. 3. The Student View</figcaption>
+    </figure>
+    <figure>
+      <img class="figma-image" src="assets\img\teacherview.svg" alt="teacher view">
+      <figcaption>Fig. 4. The Teacher View</figcaption>
+    </figure>
+  </div>
   <h3> 2.Functionalities. </h3>
   <h4> Similarities:</h4>
   <ul>
