--- a/project_description.html
+++ b/project_description.html
@@ -350,37 +350,37 @@
             Regarding the back–end, there are many choices that comes to our hand, namely NodeJS, PHP, Python, .NET, Ruby, and SQL. However, we all straightforwardly 
             unite under the idea of using Python and SQL as we believe that is the most suitable for building a database
         </p>
-        <h5>HTML 5:</h5>
+        <h4>HTML 5:</h4>
         <p>
             HTML 5 is one of the first programming languages that the students learn in their first year of university. Nevertheless, the programming language still 
             proved to be sufficient in building a suitable user–interface. The major objective of HTML is to provide blocks that make up the structure of the website. 
             That structure will then serve as the backbone for decoration and animation provided by CSS and JavaScript.
         </p>
-        <h5>CSS 3:</h5>
+        <h4>CSS 3:</h4>
         <p>
             Along with HTML, CSS is one of the friendliest programming languages for beginners while still being able to produce high quality interface. As the programming 
             language is also famous nowadays, it can be executed without the risk of mismatch in the technology. The main purpose of CSS is to enable the presentation of 
             layout, colors, and fonts.
         </p>
-        <h5>JavaScript:</h5>
+        <h4>JavaScript:</h4>
         <p>
             Although JavaScript is not initially accessible with our current knowledge, we believe it is worth the time to research and learn how to code in JavaScript. 
             The programming language itself is one of the most popular choices regarding the Front–end section with many distinct features. In this product, JavaScript 
             is responsible for the interactive features of web behavior.
         </p>
-        <h5>SQL:</h5>
+        <h4>SQL:</h4>
         <p>
             Just like JavaScript, SQL does not belong in our current knowledge asset but is tempting enough for us to strive for. It is said to possess the ability to 
             function at high speed, meaning an efficient and quick data flow for the user. Hence, we will use SQL to construct the back–end database for the management 
             system.
         </p>
-        <h5>Python:</h5>
+        <h4>Python:</h4>
         <p>
             Being the first programming language and one of the most versatile one, Python is the first name came up to our mind when we were brainstorming our options. 
             Famous as it is, choosing Python also give us the chance to implement many open-source library that is both highly efficient and convenient for the developer. 
             The main logic of the product will be handled by Python.
         </p>
-        <h5>GitHub:</h5>
+        <h4>GitHub:</h4>
         <p>
             Cooperation between freshmen in programming is challenging since everyone will have their own platform to work on and the result is conflicted when added together. 
             That is where GitHub truly shines. By using GitHub, the delegation between team members is more feasible as they can create a branch to focus on their own part. 
@@ -397,12 +397,12 @@
         <h4>
             <li>The timetable</li>
         </h4>
-        <img src="assets\img\Timetable.png" alt="Complete timetable from week 1 to 11">
+        <img class="timetable" src="assets\img\Timetable.png" alt="Complete timetable from week 1 to 11">
         <h3>Testing</h3>
         <div>
             <figure>
                 <img class="testing-diagram" src="assets\img\testingdiagram.svg" alt="Testing diagram">
-                <figcaption>Fig. 1 The testing diagram</figcaption>
+                <figcaption>Fig. 1. The testing diagram</figcaption>
             </figure>
             <ol>
                 <li><strong>Development:</strong> Developing and improving the code to create a complete product.</li>
@@ -525,7 +525,7 @@
                 </p>
             </li>
             <li>
-                <p>Lack of dedication</p>
+                <p><strong>Lack of dedication</strong></p>
                 <p>
                     Students have occasionally abandoned projects midway through, and every group has had to take precautions against this risk for a long time. The quality of the tasks assigned 
                     to a student will undoubtedly suffer if they decide not to commit to the project, or worse, they will not even turn in the work. When this happens, the project will be hindered, 
@@ -536,7 +536,7 @@
                 </p>
             </li>
             <li>
-                <p>Lack of engagement</p>
+                <p><strong>Lack of engagement</strong></p>
                 <p>
                     A project can be completed only when the tasks are appropriately assigned to the various team members. Nevertheless, there are cases of group members choosing not to cooperate. 
                     It is either brought on by the oddness of new friends or resistance to social interaction. Whatever the motivation, refusing to cooperate is never beneficial. The tasks cannot 
@@ -547,7 +547,7 @@
                 </p>
             </li>
             <li>
-                <p>Lack of customers' attraction</p>
+                <p><strong>Lack of customers' attraction</strong></p>
                 <p>
                     The field of educational management applications is popular nowadays, and hence, our product has many competitors. These are big organizations with a history in the education segment, 
                     namely Canvas, Outlook, and VietSchool. To compete with those major organizations, having a refreshing user interface and optimized features is still insufficient. The project will not 
@@ -556,8 +556,6 @@
                 </p>
             </li>
         </ol>
-
-<<<<<<< Updated upstream
     </div>
 </div>
 </body>
